crates/cctui-tui/src/snapshots/cctui__view_snapshots__model_picker_while_the_lists_load.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui (main) on orion ── gpt-5.6-sol·high ── $1.25 ── auto
∴ thinking (2 lines)  (2 more · o)                                                                 ▕
 Read  crates/cctui-tui/src/main.rs  read                                                          ▕
└ 984 lines                                                                                        ▕
 Bash  car┌ Model · codex ───────────────────────────────────────────────────────────────┐         ▕
└ ✗ exit 1│  reading the model list…                                                     │         ▐
          │                                                                              │         ▐
● Assistan│                                                                              │         ▐
Looking at│                                                                              │         ▐
          │                                                                              │         ▐
- one     │                                                                              │         ▐
- two     │                                                                              │         ▐
⏱ 12.4k in│                                                                              │         ▐
⏱ 38s     │                                                                              │         ▐
          │                                                                              │         ▐
◆ lane-b  │                                                                              │         ▐
the parser│                                                                              │         ▐
· keep-ali│                                                                              │         ▐
⟳ context │  Esc cancel                                                                  │         ▐
          └──────────────────────────────────────────────────────────────────────────────┘         ▐
◁ Reply done                                                                                       ▐
────────────────────────────────────────────────────────────────────────────────────────────────────
 ⠋ working
❯  Type a message...
