crates/cctui-tui/src/snapshots/cctui__view_snapshots__overview_view_before_the_stats_land.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1763
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview  4 Machines  5 Access  6 Accounts  7 Settings  8 Spend
┌ Overview ────────────────────────────────────────────────────────────────────────────────────────┐
│ 3                  live                                                                          │
│ 1                  need input                                                                    │
│ 0/0                machines online                                                               │
│ $0.00              cost of today's sessions                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k Scroll  r Refresh  1-9 Switch view  ? Help  q Quit
