crates/cctui-tui/src/snapshots/cctui__view_snapshots__overview_view_narrow.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: "render_screen_sized(&mut app, 60, 20)"
---
 cctui  v0.0.0-test  ● 3  ⚠ 1  ▪ 1/2  $0.00
 1 Sessions  2 Bookmarks  3 Overview  4 Access  5 Accounts
┌ Overview ────────────────────────────────────────────────┐
│ 3                  live                                  │
│ 1                  need input                            │
│ 1/2                machines online                       │
│ 18 (6 archived)    sessions                              │
│ 4 / 11 / 17        registered today / week / month       │
│ $0.00              cost of today's sessions              │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 j/k Scroll  r Refresh  1-9 Switch view  ? Help  q Quit
