crates/cctui-tui/src/snapshots/cctui__view_snapshots__overview_view_with_a_session_needing_input.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1533
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● 3 live  ▪ 1/2 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview  4 Machines  5 Access  6 Accounts  7 Settings
┌ Overview ────────────────────────────────────────────────────────────────────────────────────────┐
│ 3                  live                                                                          │
│ 1                  need input                                                                    │
│ 1/2                machines online                                                               │
│ 18 (6 archived)    sessions                                                                      │
│ 4 / 11 / 17        registered today / week / month                                               │
│ $0.00              cost of today's sessions                                                      │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 j/k Scroll  r Refresh  1-9 Switch view  ? Help  q Quit
