crates/cctui-tui/src/snapshots/cctui__view_snapshots__pins_list.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 infra (main) on orion ── opus ── $1.25 ── ⚑ 3
                                                                                                   ▕
∴ thinking (2 lines)  (2 more · o)                                                                 ▕
⚑  Read  crates/cctui-tui/src/main.rs  read                                                        ▕
└ 984 ┌ Pinned messages ─────────────────────────────────────────────────────────────────────┐     ▕
 Bash │❯ #1 user add a snapshot harness                                                      │     ▐
└ ✗ ex│  #3 tool crates/cctui-tui/src/main.rs                                                │     ▐
      │  #99 — (not loaded)                                                                  │     ▐
● Assi│                                                                                      │     ▐
Lookin│                                                                                      │     ▐
      │                                                                                      │     ▐
- one │                                                                                      │     ▐
- two │                                                                                      │     ▐
⏱ 12.4│                                                                                      │     ▐
⏱ 38s │                                                                                      │     ▐
      │                                                                                      │     ▐
◆ lane│                                                                                      │     ▐
the pa│                                                                                      │     ▐
⟳ cont│ ↑↓ Pick  Enter Jump  m/d Unpin  Esc Close                                            │     ▐
      └──────────────────────────────────────────────────────────────────────────────────────┘     ▐
◁ Reply done                                                                                       ▐
────────────────────────────────────────────────────────────────────────────────────────────────────
 ◆ waiting for input
❯  Type a message...
