crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_info_popup.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
assertion_line: 1041
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $1.25 today  ! 1 need input — Ctrl+g
 1 Sessions  2  3  4   starred · live · dispatched  sort: activity ↓  group: status
   ┌ Session info ──────────────────────────────────────────────────────────────────────────────┐
   │s-working                                                                                   │
   │session:                                                                                    │
▸  │id                                 s-working                                                │
   │parent                             —                                                        │
   │machine                            orion                                                    │
   │adapter                            claude-code                                              │
   │origin                             cctui                                                    │
   │account                            main                                                     │
   │model                              opus (high)                                              │
   │permission mode                    yolo                                                     │
   │registered                         1h ago                                                   │
   │last heartbeat                     2s ago                                                   │
   │last tool                          45s ago                                                  │
   │server:                                                                                     │
   │status                             active                                                   │
   │account                            main                                                     │
   │account bound                      true                                                     │
   │ j/k Scroll  r Refresh  y Copy id  D/i Switch  Esc Close    16/30                           │
   └────────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
