crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_info_popup_names_a_foreign_origin.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  ● ~3 live  ▪ 0/0 machines  $0.00 today  ! 1 need input — Ctrl+g
 1 Sessions  2 Bookmarks  3 Overview   starred · live · dispatched  sort: activity ↓  group: status
   ┌ Session info ──────────────────────────────────────────────────────────────────────────────┐
   │s-working                                                                                   │
   │session:                                                                                    │
▸  │id                                 s-working                                                │
   │parent                             —                                                        │
   │machine                            orion                                                    │
   │adapter                            claude-code                                              │
   │origin                             foreign — cctui did not start it                         │
   │account                            ambient                                                  │
   │model                              —                                                        │
   │permission mode                    —                                                        │
   │registered                         —                                                        │
   │last heartbeat                     —                                                        │
   │last tool                          —                                                        │
   │fetching…                                                                                   │
   │                                                                                            │
   │                                                                                            │
   │                                                                                            │
   │ j/k Scroll  r Refresh  y Copy id  D/i Switch  Esc Close                                    │
   └────────────────────────────────────────────────────────────────────────────────────────────┘

 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
