crates/cctui-tui/src/snapshots/cctui__view_snapshots__session_list.snap
---
source: crates/cctui-tui/src/view_snapshots.rs
expression: render_screen(&mut app)
---
 cctui  v0.0.0-test  4 sessions  ● 3 active
 Sessions
   Needs input
▸    ● [claude-code] infra (main)  opus  0s  $1.25
   Working
     ● [claude-code] cctui (main)  opus  0s  $1.25
      ↳ ● [claude-code] cctui-sub (main)  opus  0s  $1.25
   Completed
     ○ [claude-code] notes (main)  opus  0s  $1.25














 j/k:nav  Enter:open  g/G:top/bottom  ?:help  q:quit
